--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         app:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/btnDisable"
         android:layout_width="238dp"
         android:layout_height="250dp"
         android:layout_alignParentStart="true"
@@ -46,33 +46,31 @@
         app:srcCompat="@drawable/preferencesi" />
 
     <TextView
-        android:id="@+id/xText"
+        android:id="@+id/readText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="134dp"
-        android:text="X" />
+        android:layout_marginTop="119dp"
+        android:visibility="visible" />
 
     <TextView
-        android:id="@+id/yText"
+        android:id="@+id/saveText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/xText"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="184dp"
-        android:text="Y" />
+        android:layout_alignTop="@+id/readText"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="30dp"
+        android:visibility="visible" />
 
     <TextView
-        android:id="@+id/zText"
+        android:id="@+id/sText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/xText"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="0dp"
-        android:text="Z" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp" />
 
 </RelativeLayout>
